ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: lion
  name: console-frontend-ingress
  annotations:
    nginx.org/server-snippets: |
      location /api {
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header REMOTE-HOST $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        rewrite /api/(.*)$ /$1 break;
        proxy_pass http://10.90.99.219:8080;
      }
      location /api/file {
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header REMOTE-HOST $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        rewrite /api/file/(.*)$ /$1 break;
        proxy_pass http://10.90.35.42:9000;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: www.lion.com
      http:
        paths:
          - path: /
            backend:
              serviceName: console-frontend-service
              servicePort: 80
